--- a/content/post/2021-10-20-intermediate-r/index.en.Rmd
+++ b/content/post/2021-10-20-intermediate-r/index.en.Rmd
@@ -50,7 +50,14 @@ TRUE <= FALSE
 Remember that for string comparison, R determines the greater than relationship based on alphabetical order. Also, keep in mind that TRUE is treated as 1 for arithmetic, and FALSE is treated as 0. Therefore, FALSE < TRUE is TRUE.
 
 ```{r}
+# Comparison of numerics
+-6 * 5 + 2 >=  -10 + 1
 
+# Comparison of character strings
+"raining" <= "raining dogs"
+
+# Comparison of logicals
+TRUE > FALSE
 ```
 
 
@@ -60,8 +67,31 @@ You are already aware that R is very good with vectors. Without having to change
 
 Let's go back to the example that was started in the video. You want to figure out whether your activity on social media platforms have paid off and decide to look at your results for LinkedIn and Facebook. The sample code in the editor initializes the vectors linkedin and facebook. Each of the vectors contains the number of profile views your LinkedIn and Facebook profiles had over the last seven days.
 
-```{r}
+Using relational operators, find a logical answer, i.e. TRUE or FALSE, for the following questions:
 
+On which days did the number of LinkedIn profile views exceed 15?
+
+When was your LinkedIn profile viewed only 5 times or fewer?
+
+When was your LinkedIn profile visited more often than your Facebook profile?
+
+
+
+
+
+```{r}
+# The linkedin and facebook vectors have already been created for you
+linkedin <- c(16, 9, 13, 5, 2, 17, 14)
+facebook <- c(17, 7, 5, 16, 8, 13, 14)
+
+# Popular days
+linkedin > 15
+
+# Quiet days
+linkedin <= 5
+
+# LinkedIn more popular than Facebook
+facebook < linkedin
 ```
 
 
@@ -71,8 +101,21 @@ R's ability to deal with different data structures for comparisons does not stop
 
 Instead of in vectors (as in the previous exercise), the LinkedIn and Facebook data is now stored in a matrix called views. The first row contains the LinkedIn information; the second row the Facebook information. The original vectors facebook and linkedin are still available as well.
 
-```{r}
+When were the views exactly equal to 13? Use the views matrix to return a logical matrix.
 
+For which days were the number of views less than or equal to 14? Again, have R return a logical matrix.
+
+```{r}
+# The social data has been created for you
+linkedin <- c(16, 9, 13, 5, 2, 17, 14)
+facebook <- c(17, 7, 5, 16, 8, 13, 14)
+views <- matrix(c(linkedin, facebook), nrow = 2, byrow = TRUE)
+views
+# When does views equal 13?
+views == 13
+
+# When is views less than or equal to 14?
+views <= 14
 ```
 
 
@@ -89,7 +132,15 @@ Watch out: 3 < x < 7 to check if x is between 3 and 7 will not work; you'll need
 In this exercise, you'll be working with the last variable. This variable equals the last value of the linkedin vector that you've worked with previously. The linkedin vector represents the number of LinkedIn views your profile had in the last seven days, remember? Both the variables linkedin and last have been pre-defined for you.
 
 ```{r}
+# The linkedin and last variable are already defined for you
+linkedin <- c(16, 9, 13, 5, 2, 17, 14)
+last <- tail(linkedin, 1)
+last
+# Is last under 5 or above 10?
+last < 5 | last > 10
 
+# Is last between 15 (exclusive) and 20 (inclusive)?
+15 <last & last <= 20
 ```
 
 
