--- a/content/post/2021-10-20-intermediate-r/index.en.Rmd
+++ b/content/post/2021-10-20-intermediate-r/index.en.Rmd
@@ -9,6 +9,8 @@ tags:
 ---
 ```{r include=FALSE}
 li_df <- read.csv("li_df.csv")
+
+ttt <- matrix(c("0", NA, "X", NA, "0", NA, "X", "0", "X"), nrow=3)
 ```
 
 Intermediate R is the next stop on your journey in mastering the R programming language. In this R training, you will learn about conditional statements, loops, and functions to power your own R scripts. Next, make your R code more efficient and readable using the apply functions. Finally, the utilities chapter gets you up to speed with regular expressions in R, data structure manipulations, and times and dates. This course will allow you to take the next step in advancing your overall knowledge and capabilities while programming in R.
@@ -338,7 +340,17 @@ If your session expires when you run your code, check the body of your while loo
 Have a look at the sample code provided; it initializes the speed variables and already provides a while loop template to get you started.
 
 ```{r}
+# Initialize the speed variable
+speed <- 64
 
+# Code the while loop
+while ( speed> 30 ) {
+  print ("Slow down!")
+  speed <- speed-7
+}
+
+# Print out the speed variable
+speed
 ```
 
 ## 2-3 Throw in more conditionals
@@ -350,7 +362,20 @@ There are several ways in which you could make your driver's assistant more adva
 A while loop similar to the one you've coded in the previous exercise is already available for you to use. It prints out your current speed, but there's no code that decreases the speed variable yet, which is pretty dangerous. Can you make the appropriate changes?
 
 ```{r}
+# Initialize the speed variable
+speed <- 64
 
+# Extend/adapt the while loop
+while (speed > 30) {
+  print(paste("Your speed is",speed))
+  if (speed > 48 ) {
+    print("Slow down big time!")
+    speed <- speed-11
+  } else {
+    print("Slow down!")
+    speed <- speed-6
+  }
+}
 ```
 
 ## 2-4 Stop the while loop: break
@@ -360,7 +385,25 @@ There are some very rare situations in which severe speeding is necessary: what 
 This seems like a great opportunity to include the break statement in the while loop you've been working on. Remember that the break statement is a control statement. When R encounters it, the while loop is abandoned completely.
 
 ```{r}
+# Initialize the speed variable
+speed <- 88
 
+while (speed > 30) {
+  print(paste("Your speed is", speed))
+  
+  # Break the while loop when speed exceeds 80
+  if (speed > 80) {
+    break
+  }
+  
+  if (speed > 48) {
+    print("Slow down big time!")
+    speed <- speed - 11
+  } else {
+    print("Slow down!")
+    speed <- speed - 6
+  }
+}
 ```
 
 ## 2-5 Build a while loop from scratch
@@ -368,7 +411,17 @@ This seems like a great opportunity to include the break statement in the while 
 The previous exercises guided you through developing a pretty advanced while loop, containing a break statement and different messages and updates as determined by control flow constructs. If you manage to solve this comprehensive exercise using a while loop, you're totally ready for the next topic: the for loop.
 
 ```{r}
+# Initialize i as 1 
+i <- 1
 
+# Code the while loop
+while (i <= 10) {
+  print(3 * i)
+  if ((i * 3) %% 8 == 0) {
+    break
+  }
+  i <- i + 1
+}
 ```
 
 ## 2-7 Loop over a vector
@@ -390,7 +443,18 @@ for (i in 1:length(primes)) {
 Remember our linkedin vector? It's a vector that contains the number of views your LinkedIn profile had in the last seven days. The linkedin vector has been pre-defined so that you can fully focus on the instructions!
 
 ```{r}
+# The linkedin vector has already been defined for you
+linkedin <- c(16, 9, 13, 5, 2, 17, 14)
 
+# Loop version 1
+for (i in linkedin) {
+    print(i)
+}
+print("----------------------")
+# Loop version 2
+for (i in 1:length(linkedin)) {
+    print(linkedin[i])
+}
 ```
 
 ## 2-8 Loop over a list
@@ -414,7 +478,22 @@ Notice that you need double square brackets - [[ ]] - to select the list element
 Suppose you have a list of all sorts of information on New York City: its population size, the names of the boroughs, and whether it is the capital of the United States. We've already defined a list nyc containing this information (source: Wikipedia).
 
 ```{r}
+# The nyc list is already specified
+nyc <- list(pop = 8405837, 
+            boroughs = c("Manhattan", "Bronx", "Brooklyn", "Queens", "Staten Island"), 
+            capital = FALSE)
 
+# Loop version 1
+for (p in nyc) {
+  print(p)
+}
+
+
+
+# Loop version 2
+for (i in 1:length(nyc)) {
+  print(nyc[[i]])
+}
 ```
 
 ## 2-9 Loop over a matrix
@@ -429,8 +508,23 @@ for (var1 in seq1) {
   }
 }
 
-```{r}
+Finish the nested for loops to go over the elements in ttt:
 
+The outer loop should loop over the rows, with loop index i (use 1:nrow(ttt)).
+
+The inner loop should loop over the columns, with loop index j (use 1:ncol(ttt)).
+
+Inside the inner loop, make use of print() and paste() to print out information in the following format: "On row i and column j the board contains x", where x is the value on that position.
+
+```{r}
+# The tic-tac-toe matrix ttt has already been defined for you
+
+# define the double for loop
+for (i in 1:nrow(ttt)) {
+  for (j in 1:ncol(ttt)) {
+    print(paste("On row", i, "and column", j, "the board contains",ttt[i,j]))
+  }
+}
 ```
 
 ## 2-10 Mix it up with control flow
