--- a/content/post/2021-10-20-intermediate-r/index.en.Rmd
+++ b/content/post/2021-10-20-intermediate-r/index.en.Rmd
@@ -741,40 +741,184 @@ facebook <- c(17, NA, 5, 16, 8, 13, 14)
 mean(abs(linkedin -facebook), na.rm=TRUE)
 ```
 
-## 3-9 
+## 3-9 Write your own function
+
+Wow, things are getting serious… you're about to write your own function! Before you have a go at it, have a look at the following function template:
+
+my_fun <- function(arg1, arg2) {
+  body
+}
+
+Notice that this recipe uses the assignment operator (<-) just as if you were assigning a vector to a variable for example. This is not a coincidence. Creating a function in R basically is the assignment of a function object to a variable! In the recipe above, you're creating a new R variable my_fun, that becomes available in the workspace as soon as you execute the definition. From then on, you can use the my_fun as a function.
 
 ```{r}
+# Create a function pow_two()
+pow_two <- function(a){
+a*a
+}
 
+
+# Use the function
+pow_two(12)
+
+# Create a function sum_abs()
+sum_abs <- function(b,c){
+abs(b)+abs(c)
+}
+
+
+# Use the function
+sum_abs(-2,3)
 ```
 
-## 3-10 
+## 3-10 Write your own function (2)
+
+There are situations in which your function does not require an input. Let's say you want to write a function that gives us the random outcome of throwing a fair die:
+
+throw_die <- function() {
+  number <- sample(1:6, size = 1)
+  number
+}
+
+throw_die()
+
+Up to you to code a function that doesn't take any arguments!
 
 ```{r}
+# Define the function hello()
+hello <- function(){
+print("Hi there!")
+return(TRUE)
+}
 
+
+
+
+# Call the function hello()
+hello()
 ```
 
-## 3-11 
+## 3-11 Write your own function (3)
+
+Do you still remember the difference between an argument with and without default values? The usage section in the sd() documentation shows the following information:
+
+sd(x, na.rm = FALSE)
+This tells us that x has to be defined for the sd() function to be called correctly, however, na.rm already has a default value. Not specifying this argument won't cause an error.
+
+You can define default argument values in your own R functions as well. You can use the following recipe to do so:
+
+my_fun <- function(arg1, arg2 = val2) {
+  body
+}
+
+The editor on the right already includes an extended version of the pow_two() function from before. Can you finish it?
 
 ```{r}
-
+# Finish the pow_two() function
+pow_two <- function(x, print_info=TRUE) {
+  y <- x ^ 2
+  if(print_info == TRUE){
+     print(paste(x, "to the power two equals", y))
+  }
+ 
+  return(y)
+}
 ```
 
-## 3-14 
+## 3-14 R you functional?
+
+Now that you've acquired some skills in defining functions with different types of arguments and return values, you should try to create more advanced functions. As you've noticed in the previous exercises, it's perfectly possible to add control-flow constructs, loops and even other functions to your function body.
+
+Remember our social media example? The vectors linkedin and facebook are already defined in the workspace so you can get your hands dirty straight away. As a first step, you will be writing a function that can interpret a single value of this vector. In the next exercise, you will write another function that can handle an entire vector at once.
 
 ```{r}
 
+facebook2 <- c(17,  7,  5, 16,  8, 13, 14)
+# The linkedin and facebook vectors have already been created for you
+
+# Define the interpret function
+interpret <- function(num_views) {
+  if (num_views > 15) {
+    print("You're popular!")
+    return(num_views)
+  } else {
+    print("Try to be more visible!")
+    return(0)
+  }
+}
+
+# Call the interpret function twice
+interpret(linkedin[1])
+interpret(facebook2[2])
 ```
 
-## 3-15 
+## 3-15 R you functional? (2)
+
+A possible implementation of the interpret() function has been provided for you. In this exercise you'll be writing another function that will use the interpret() function to interpret all the data from your daily profile views inside a vector. Furthermore, your function will return the sum of views on popular days, if asked for. A for loop is ideal for iterating over all the vector elements. The ability to return the sum of views on popular days is something you can code through a function argument with a default value.
 
 ```{r}
+# The linkedin and facebook vectors have already been created for you
+linkedin <- c(16, 9, 13, 5, 2, 17, 14)
+facebook <- c(17, 7, 5, 16, 8, 13, 14)
 
+# The interpret() can be used inside interpret_all()
+interpret <- function(num_views) {
+  if (num_views > 15) {
+    print("You're popular!")
+    return(num_views)
+  } else {
+    print("Try to be more visible!")
+    return(0)
+  }
+}
+
+# Define the interpret_all() function
+# views: vector with data to interpret
+# return_sum: return total number of views on popular days?
+interpret_all <- function(views, return_sum=TRUE) {
+  count <- 0
+
+  for (v in views) {
+count <- count+ interpret(v)
+  }
+
+  if (return_sum==TRUE) {
+    count
+  } else {
+    NULL
+  }
+}
+
+# Call the interpret_all() function on both linkedin and facebook
+interpret_all(linkedin)
+interpret_all(facebook)
 ```
 
-## 3-17 
+## 3-17 Load an R Package
+
+There are basically two extremely important functions when it comes down to R packages:
+
+install.packages(), which as you can expect, installs a given package.
+library() which loads packages, i.e. attaches them to the search list on your R workspace.
+To install packages, you need administrator privileges. This means that install.packages() will thus not work in the DataCamp interface. However, almost all CRAN packages are installed on our servers. You can load them with library().
+
+In this exercise, you'll be learning how to load the ggplot2 package, a powerful package for data visualization. You'll use it to create a plot of two variables of the mtcars data frame. The data has already been prepared for you in the workspace.
+
+Before starting, execute the following commands in the console:
+
+search(), to look at the currently attached packages and
+qplot(mtcars$wt, mtcars$hp), to build a plot of two variables of the mtcars data frame.
+An error should occur, because you haven't loaded the ggplot2 package yet!
 
 ```{r}
+# Load the ggplot2 package
+library(ggplot2)
 
+# Retry the qplot() function
+qplot(mtcars$wt, mtcars$hp)
+
+# Check out the currently attached packages again
+search()
 ```
 
 
