--- a/content/post/2021-10-20-intermediate-r/index.en.Rmd
+++ b/content/post/2021-10-20-intermediate-r/index.en.Rmd
@@ -1000,7 +1000,20 @@ lapply(list(1,2,3), function(x) { 3 * x })
 split_low is defined for you.
 
 ```{r}
+# split_low has been created for you
+split_low
 
+# Transform: use anonymous function inside lapply
+function(x) {
+  x[1]
+}
+names <- lapply(split_low, function(x) {x[1]})
+
+# Transform: use anonymous function inside lapply
+function(x) {
+  x[2]
+}
+years <- lapply(split_low, function(x) {x[2]})
 ```
 
 
@@ -1016,7 +1029,19 @@ lapply(list(1,2,3), multiply, factor = 3)
 On the right we've included a generic version of the select functions that you've coded earlier: select_el(). It takes a vector as its first argument, and an index as its second argument. It returns the vector's element at the specified index.
 
 ```{r}
+# Definition of split_low
+pioneers <- c("GAUSS:1777", "BAYES:1702", "PASCAL:1623", "PEARSON:1857")
+split <- strsplit(pioneers, split = ":")
+split_low <- lapply(split, tolower)
 
+# Generic select function
+select_el <- function(x, index) {
+  x[index]
+}
+
+# Use lapply() twice on split_low: names and years
+names <- lapply(split_low, select_el, index=1)
+years <- lapply(split_low, select_el, index=2)
 ```
 
 
@@ -1029,7 +1054,26 @@ sapply(X, FUN, ...)
 In the next couple of exercises, you'll be working with the variable temp, that contains temperature measurements for 7 days. temp is a list of length 7, where each element is a vector of length 5, representing 5 measurements on a given day. This variable has already been defined in the workspace: type str(temp) to see its structure.
 
 ```{r}
+# temp has already been defined in the workspace
+temp <- list(c(3, 7, 9, 6, -1),
+             c(6, 9, 12, 13, 5),
+             c(4, 8, 3, -1, -3),
+             c(1, 4, 7, 2, -2),
+             c(5, 7, 9, 4, 2),
+             c(-3, 5, 8, 9, 4),
+             c(3, 6, 9, 4, 1))
 
+# Use lapply() to find each day's minimum temperature
+lapply(temp, min)
+
+# Use sapply() to find each day's minimum temperature
+sapply(temp, min)
+
+# Use lapply() to find each day's maximum temperature
+lapply(temp, max)
+
+# Use sapply() to find each day's maximum temperature
+sapply(temp, max)
 ```
 
 
@@ -1042,7 +1086,18 @@ sapply(X, FUN, ...)
 Here, FUN can be one of R's built-in functions, but it can also be a function you wrote. This self-written function can be defined before hand, or can be inserted directly as an anonymous function.
 
 ```{r}
+# temp is already defined in the workspace
 
+# Finish function definition of extremes_avg
+extremes_avg <- function(x) {
+  ( min(x) + max(x) ) / 2
+}
+
+# Apply extremes_avg() over temp using sapply()
+sapply(temp, extremes_avg)
+
+# Apply extremes_avg() over temp using lapply()
+lapply(temp, extremes_avg)
 ```
 
 
