--- a/content/post/2021-10-20-intermediate-r/index.en.Rmd
+++ b/content/post/2021-10-20-intermediate-r/index.en.Rmd
@@ -1128,7 +1128,21 @@ It seems like we've hit the jackpot with sapply(). On all of the examples so far
 We already created a function, below_zero(), that takes a vector of numerical values and returns a vector that only contains the values that are strictly below zero.
 
 ```{r}
+# temp is already prepared for you in the workspace
 
+# Definition of below_zero()
+below_zero <- function(x) {
+  return(x[x < 0])
+}
+
+# Apply below_zero over temp using sapply(): freezing_s
+freezing_s <- sapply(temp, below_zero)
+
+# Apply below_zero over temp using lapply(): freezing_l
+freezing_l <- lapply(temp, below_zero)
+
+# Are freezing_s and freezing_l identical?
+identical(freezing_s, freezing_l)
 ```
 
 
@@ -1139,7 +1153,18 @@ You already have some apply tricks under your sleeve, but you're surely hungry f
 A function print_info(), that takes a vector and prints the average of this vector, has already been created for you. It uses the cat() function.
 
 ```{r}
+# temp is already available in the workspace
 
+# Definition of print_info()
+print_info <- function(x) {
+  cat("The average temperature is", mean(x), "\n")
+}
+
+# Apply print_info() over temp using sapply()
+sapply(temp, print_info)
+
+# Apply print_info() over temp using lapply()
+lapply(temp, print_info)
 ```
 
 
